sfdx-source/force-app/main/default/objects/WorkOrder/fields/Mx_Onboarding_Link__c.field-meta.xml
<CustomField>
    <fullName>Mx_Onboarding_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-24784: It is used to associate the Mx Onboarding Link which resulted into the Work Order creation.</description>
    <label>Mx Onboarding Link</label>
    <referenceTo>Mx_Onboarding_Link__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>