sfdx-source/force-app/main/default/objects/WorkOrder/fields/Mx_Requested_Photoshoot__c.field-meta.xml
<CustomField>
    <fullName>Mx_Requested_Photoshoot__c</fullName>
    <description>LEM-14603: It is used to see if Mx has requested Photoshoot or not.</description>
    <label>Mx Requested Photoshoot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>