sfdx-source/force-app/main/default/objects/WorkOrder/fields/Mx_Tags__c.field-meta.xml
<CustomField>
    <fullName>Mx_Tags__c</fullName>
    <description>LEM-14041: It provides Mx Tags of associated Business Account and used for routing Work Plans.</description>
    <label>Mx Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>