sfdx-source/force-app/main/default/objects/WorkOrder/fields/Nintex_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Use_Case__c</fullName>
    <description>LEM-3656: It indicates the Nintex use case value of the related Opportunity.</description>
    <formula>IF(
  OR(
    ISBLANK(Opportunity__c),
    ISBLANK(TEXT(Opportunity__r.Nintex_Use_Case__c))
  ),
  $Label.NintexUseCaseNone,
  TEXT(Opportunity__r.Nintex_Use_Case__c)
)</formula>
    <label>Nintex Use Case</label>
    <type>Text</type>
</CustomField>