sfdx-source/force-app/main/default/objects/WorkOrder/fields/Number_of_Stores_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stores_on_Quote__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18591: It represents the number of stores on the Quote.</description>
    <formula>Contract__r.SBQQ__Quote__r.Number_of_Stores__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Stores on Quote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>