sfdx-source/force-app/main/default/objects/WorkOrder/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1695: It stores link to associated Opportunity. It is used for embedding Opportunity Name with link in email templates.</description>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_540, FIND($CustomMetadata.Static_Configurations__mdt.Enterprise_Server_URL_Search_Key.Configuration_Value__c, $Api.Enterprise_Server_URL_540, 0) - 1) + Opportunity__c, Opportunity__r.Name)</formula>
    <label>Opportunity Link</label>
    <type>Text</type>
</CustomField>