sfdx-source/force-app/main/default/objects/WorkOrder/fields/Originating_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Originating_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Originating_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>