sfdx-source/force-app/main/default/objects/WorkOrder/fields/Parent_Mx_Tags__c.field-meta.xml
<CustomField>
    <fullName>Parent_Mx_Tags__c</fullName>
    <description>LEM-25599: It stores value from Mx Tags field on the parent Work Order to child Work Order. It is used by Q-assign to check Mx Tags for routing queues.</description>
    <formula>IF(ParentWorkOrderId = null, Mx_Tags__c, ParentWorkOrder.Mx_Tags__c)</formula>
    <label>Parent Mx Tags</label>
    <type>Text</type>
</CustomField>