sfdx-source/force-app/main/default/objects/WorkOrder/fields/PDOA_Delay_Count__c.field-meta.xml
<CustomField>
    <fullName>PDOA_Delay_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>LEM-6211: field to count how many times PDOA was delayed</description>
    <label>PDOA Delay Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>