sfdx-source/force-app/main/default/objects/WorkOrder/fields/PDOA_Delay_Details__c.field-meta.xml
<CustomField>
    <fullName>PDOA_Delay_Details__c</fullName>
    <description>LEM-6212</description>
    <label>PDOA Delay Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>