sfdx-source/force-app/main/default/objects/WorkOrder/fields/PDOA_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>PDOA_Delay_Reason__c</fullName>
    <description>LEM-6212</description>
    <label>PDOA Delay Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Information Missing/Incorrect</fullName>
            </value>
            <value>
                <fullName>DM Decision - Missing Photos</fullName>
            </value>
            <value>
                <fullName>DM Decision - PDOA Moved Up</fullName>
            </value>
            <value>
                <fullName>DM Decision - Refused Activation</fullName>
            </value>
            <value>
                <fullName>DM Decision - Store Operations Not Ready</fullName>
            </value>
            <value>
                <fullName>DM Decision - Temporary Closure</fullName>
            </value>
            <value>
                <fullName>DM Unresponsive - Follow Up Needed</fullName>
            </value>
            <value>
                <fullName>DM Unresponsive - Gone Dark</fullName>
            </value>
            <value>
                <fullName>Drive SLA</fullName>
            </value>
            <value>
                <fullName>Invalid Bank Info</fullName>
            </value>
            <value>
                <fullName>Invalid Fraud Flag</fullName>
            </value>
            <value>
                <fullName>Missing Affiliate Program - Cannot Activate</fullName>
            </value>
            <value>
                <fullName>Non-Integrated Menu Issues</fullName>
            </value>
            <value>
                <fullName>Not in Coverage</fullName>
            </value>
            <value>
                <fullName>POS Integration Issues (DD)</fullName>
            </value>
            <value>
                <fullName>POS Integration Issues (Px)</fullName>
            </value>
            <value>
                <fullName>Readiness Check Failure</fullName>
            </value>
            <value>
                <fullName>Tablet Delay</fullName>
            </value>
            <value>
                <fullName>Valid Fraud Flag</fullName>
            </value>
            <value>
                <fullName>Account Information Issues</fullName>
                <isActive>false</isActive>
                <label>Account Information Issues</label>
            </value>
            <value>
                <fullName>DM Decision to Push Back Launch</fullName>
                <isActive>false</isActive>
                <label>DM Decision to Push Back Launch</label>
            </value>
            <value>
                <fullName>DM Unresponsive</fullName>
                <isActive>false</isActive>
                <label>DM Unresponsive</label>
            </value>
            <value>
                <fullName>Menu Issues</fullName>
                <isActive>false</isActive>
                <label>Menu Issues</label>
            </value>
            <value>
                <fullName>No Photography</fullName>
                <isActive>false</isActive>
                <label>No Photography</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>POS Issues</fullName>
                <isActive>false</isActive>
                <label>POS Issues</label>
            </value>
            <value>
                <fullName>Store Manager Refused Activation</fullName>
                <isActive>false</isActive>
                <label>Store Manager Refused Activation</label>
            </value>
            <value>
                <fullName>Temporary Closure</fullName>
                <isActive>false</isActive>
                <label>Temporary Closure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>