sfdx-source/force-app/main/default/objects/WorkOrder/fields/Photoshoot_Address__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Address__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15683: It is used to store photoshoot address.</description>
    <label>Photoshoot Address</label>
    <type>Address</type>
</CustomField>