sfdx-source/force-app/main/default/objects/WorkOrder/fields/Photoshoot_Date__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Date__c</fullName>
    <description>LEM-14603: It is used to store the date of the photoshoot.</description>
    <label>Photoshoot Date</label>
    <type>Date</type>
</CustomField>