sfdx-source/force-app/main/default/objects/WorkOrder/fields/Photoshoot_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Date_Time__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15506: It calculates the Photoshoot Date/Time value based on Photoshoot Date and Photoshoot Time field values.</description>
    <formula>if(Hour(Photoshoot_Time__c)&gt;17,TEXT(Photoshoot_Date__c+1)&amp;&apos; &apos;&amp;Text(Photoshoot_Time__c+(3600000*7))&amp;&apos;Z&apos;,TEXT(Photoshoot_Date__c)&amp;&apos; &apos;&amp;Text(Photoshoot_Time__c+(3600000*7))&amp;&apos;Z&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photoshoot Date &amp; Time</label>
    <type>Text</type>
</CustomField>