sfdx-source/force-app/main/default/objects/WorkOrder/fields/Photoshoot_Review_Notes_and_Tags__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Review_Notes_and_Tags__c</fullName>
    <description>LEM-21576: It is used to store the notes and tags for vendor associated with a photoshoot.</description>
    <label>Photoshoot Review Notes and Tags</label>
    <type>TextArea</type>
</CustomField>