sfdx-source/force-app/main/default/objects/WorkOrder/fields/Photoshoot_Time__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Time__c</fullName>
    <description>LEM-14603: It is used to store the time of the photoshoot.</description>
    <label>Photoshoot Time</label>
    <type>Time</type>
</CustomField>