sfdx-source/force-app/main/default/objects/WorkOrder/fields/PhotoShoot_Vendor__c.field-meta.xml
<CustomField>
    <fullName>PhotoShoot_Vendor__c</fullName>
    <description>LEM-21576 : Assigning PhotoShoot Vendor For Bulk Request</description>
    <inlineHelpText>Assigning PhotoShoot Vendor For Bulk Request</inlineHelpText>
    <label>PhotoShoot Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>