sfdx-source/force-app/main/default/objects/WorkOrder/fields/POP_Owned__c.field-meta.xml
<CustomField>
    <fullName>POP_Owned__c</fullName>
    <description>LEM-25823: It is populated with Yes when the work plans are routed to the “POP Marketplace” queue.</description>
    <label>POP Owned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>