sfdx-source/force-app/main/default/objects/WorkOrder/fields/Primary_Routing_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Primary_Routing_Assigned__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Flag for primary routing assignment. If this flag is true then Q-Assign won&apos;t be assigned Case to Primary Queue.</description>
    <label>Primary Routing Assigned</label>
    <type>Checkbox</type>
</CustomField>