sfdx-source/force-app/main/default/objects/WorkOrder/fields/Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle__c</fullName>
    <description>LEM-16831: It stores the product bundle selected in equipment request guided flow and is used in Mx Order creation.</description>
    <label>Product Bundle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>