sfdx-source/force-app/main/default/objects/WorkOrder/fields/Proposed_Date_of_Activation_Original__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_of_Activation_Original__c</fullName>
    <description>LEM-1048: Indicates onboarding event original proposed date of activation.</description>
    <inlineHelpText>Onboarding event original proposed date of activation</inlineHelpText>
    <label>Proposed Date of Activation (Original)</label>
    <type>Date</type>
</CustomField>