sfdx-source/force-app/main/default/objects/WorkOrder/fields/Proposed_Date_of_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_of_Implementation__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15113: It is used to store the Proposed Date of Implementation.</description>
    <label>Proposed Date of Implementation</label>
    <type>Date</type>
</CustomField>