sfdx-source/force-app/main/default/objects/WorkOrder/fields/Proposed_Date_of_Menu_Original__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_of_Menu_Original__c</fullName>
    <description>LEM-1048: Indicates the date when menu should be completed by.</description>
    <inlineHelpText>Signifies the original date when menu was to be completed by</inlineHelpText>
    <label>Proposed Date of Menu (Original)</label>
    <type>Date</type>
</CustomField>