sfdx-source/force-app/main/default/objects/WorkOrder/fields/Proposed_Date_of_Tablet__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_of_Tablet__c</fullName>
    <description>LEM-813: Onboarding event proposed date of tablet.</description>
    <inlineHelpText>Onboarding event proposed date of tablet</inlineHelpText>
    <label>Proposed Date of Tablet</label>
    <type>Date</type>
</CustomField>