sfdx-source/force-app/main/default/objects/WorkOrder/fields/Proposed_Date_of_Tablet_Original__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_of_Tablet_Original__c</fullName>
    <description>LEM-1048: Indicate the original date when tablet was to be completed by.</description>
    <inlineHelpText>Signifies the original date when tablet was to be completed by</inlineHelpText>
    <label>Proposed Date of Tablet (Original)</label>
    <type>Date</type>
</CustomField>