sfdx-source/force-app/main/default/objects/WorkOrder/fields/Provisioning_Status__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Status__c</fullName>
    <description>LEM-2083: It indicates the Provisioning Status of stores and business. In addition to that, it has the following purposes:
1. It is updated on child Work Orders by provisioning integration and parent Work Orders by apex based roll-up logic.
2. Drives logic for Work Plans and Work Steps creation.
3. Indicates the readiness of the stores for provisioning in the backend databases.</description>
    <label>Provisioning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Readiness Check</fullName>
            </value>
            <value>
                <fullName>Readiness Check Failed</fullName>
            </value>
            <value>
                <fullName>Readiness Check Complete</fullName>
            </value>
            <value>
                <fullName>Ready for Provisioning</fullName>
            </value>
            <value>
                <fullName>Provisioning Complete</fullName>
            </value>
            <value>
                <fullName>Provisioning Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>