sfdx-source/force-app/main/default/objects/WorkOrder/fields/Reason_for_Additional_Photoshoot__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Additional_Photoshoot__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM - 13504: It is used to store reason for additional photoshoot in the Photoshoot Guided flow</description>
    <label>Reason for Additional Photoshoot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>