sfdx-source/force-app/main/default/objects/WorkOrder/fields/Reason_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_if_Other__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13504: It is used to store reason if other in the Photoshoot Guided flow</description>
    <label>Reason if Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>