sfdx-source/force-app/main/default/objects/WorkOrder/fields/Return_Components__c.field-meta.xml
<CustomField>
    <fullName>Return_Components__c</fullName>
    <description>LEM-13510: It is a backend field used to store the &apos;Return Components&apos; value from the Equipment request guided flow. This value indicates whether Return Work Plan is to be created.</description>
    <label>Return Components</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>