sfdx-source/force-app/main/default/objects/WorkOrder/fields/Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-22006: It represents the Sales Rep Name who created the Mx Onboarding Link.</description>
    <label>Sales Rep Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>