sfdx-source/force-app/main/default/objects/WorkOrder/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>LEM-813: Account segment linked to the onboarding event.</description>
    <formula>Text(Account.Segment__c)</formula>
    <inlineHelpText>Account segment linked to the onboarding event</inlineHelpText>
    <label>Segment</label>
    <type>Text</type>
</CustomField>