sfdx-source/force-app/main/default/objects/WorkOrder/fields/Send_Readiness_Check_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Readiness_Check_Email__c</fullName>
    <description>LEM-1684: It is used as indicator for sending readiness check failed email to Account owner on parent Work Order. It stores random integer generated while updating the provisioning status.</description>
    <label>Send Readiness Check Email</label>
    <length>10</length>
    <type>Text</type>
</CustomField>