sfdx-source/force-app/main/default/objects/WorkOrder/fields/Staging_Bulk_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Staging_Bulk_Request_Id__c</fullName>
    <description>LEM-15978: It is used to store the Staging Bulk Request Record Id on the Child Work Order during Bulk Order Creation.</description>
    <label>Staging Bulk Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>