sfdx-source/force-app/main/default/objects/WorkOrder/fields/Store_Account_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Store_Account_Activation_Status__c</fullName>
    <description>LEM-1161: Indicates Store Account&apos;s Activation Status.</description>
    <formula>TEXT(Account.Activation_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Store Account Activation Status</label>
    <type>Text</type>
</CustomField>