sfdx-source/force-app/main/default/objects/WorkOrder/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <description>LEM-1962: It stores Marketplace/Drive database Id of Store Account on child Work Orders. It is in addition to the External Id field on Xref object. It will be populated by the store provisioning integration. It allows to display the Store Id on Conga Grid view of Work Steps.</description>
    <label>Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>