sfdx-source/force-app/main/default/objects/WorkOrder/fields/Store_Location_for_Photoshoot__c.field-meta.xml
<CustomField>
    <fullName>Store_Location_for_Photoshoot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14603: It is used to store the designated store location that photoshoot will take place at when AC = No.</description>
    <label>Store Location for Photoshoot</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Store</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store Accounts</relationshipLabel>
    <relationshipName>Store_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>