sfdx-source/force-app/main/default/objects/WorkOrder/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>LEM-1271: Type of request.</description>
    <inlineHelpText>Type of request</inlineHelpText>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ads and Promo - Activate</fullName>
            </value>
            <value>
                <fullName>Ads and Promo - Deactivate</fullName>
            </value>
            <value>
                <fullName>Auto-Activations</fullName>
            </value>
            <value>
                <fullName>Business/store mapping update</fullName>
            </value>
            <value>
                <fullName>Caviar - Cross Listing</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Invoicing group/NetSuite setup/update</fullName>
            </value>
            <value>
                <fullName>Menu Updates</fullName>
            </value>
            <value>
                <fullName>Metro Based Promo</fullName>
            </value>
            <value>
                <fullName>Net-new business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partnership creation/update</fullName>
            </value>
            <value>
                <fullName>Portal access</fullName>
            </value>
            <value>
                <fullName>Rate Change</fullName>
            </value>
            <value>
                <fullName>SaaS Fee Setup</fullName>
            </value>
            <value>
                <fullName>Self Delivery</fullName>
            </value>
            <value>
                <fullName>Sponsored Listing</fullName>
            </value>
            <value>
                <fullName>COO Same Store</fullName>
            </value>
            <value>
                <fullName>Withholding</fullName>
            </value>
            <value>
                <fullName>Net-New</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Additional store creation</fullName>
                <isActive>false</isActive>
                <label>Additional store creation</label>
            </value>
            <value>
                <fullName>Marketing Free Credit</fullName>
                <isActive>false</isActive>
                <label>Marketing Free Credit</label>
            </value>
            <value>
                <fullName>Partnership update</fullName>
                <isActive>false</isActive>
                <label>Partnership update</label>
            </value>
            <value>
                <fullName>Return and Replacement</fullName>
                <isActive>false</isActive>
                <label>Return and Replacement</label>
            </value>
            <value>
                <fullName>Store Expansion</fullName>
                <isActive>false</isActive>
                <label>Store Expansion</label>
            </value>
            <value>
                <fullName>Virtual Kitchen</fullName>
                <isActive>false</isActive>
                <label>Virtual Kitchen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>